...
                        androidx.compose.material3.TextField(
                            value = value,
                            onValueChange = { newValue ->
                                value = newValue
                            },
                            maxLines = 1,
                            label = { Text(text = "Mennyiség") },
                            keyboardOptions = KeyboardOptions.Default.copy(keyboardType = KeyboardType.Number),
                            modifier = Modifier.weight(1f)
                        )
                        Spacer(modifier = Modifier.width(30.dp))
                        Row(Modifier.selectableGroup()) {
                            RadioButton(
...
